# Book-share---flask-app

./: README.md  app.py  notes.txt  pyproject.toml  sms.py  string_generator.py  trash.txt
data/postgresqlite/: postgresqlite.json
data/postgresqlite/pgdata/: postmaster.opts  postmaster.pid
data/postgresqlite/pgdata/base/1/: 1247_vm  1249_vm  1255_vm  1259  14234  14234_vm  14238  14239  14244  14244_vm  14253  2579  2605_vm  2606_vm  2607_vm  2608  2608_vm  2609  2610_vm  2615  2619  2659  2662  2664  2667  2675  2679  2684  2685  2690  2691  2692  2696  2704  2836  2838_fsm  2838_vm  2840_vm  3079_vm  3080  (+4 more)
data/postgresqlite/pgdata/base/14415/: 1247  1249  1259  1259_vm  14239_vm  14249  14249_vm  2602_vm  2606  2609_vm  2610  2612  2618  2618_vm  2619_vm  2658  2663  2665  2666  2673  2674  2678  2693  2703  2753_vm  2836_vm  2838  2840  2841  3081  3394  3455  3541_vm  (+6 more)
data/postgresqlite/pgdata/global/: 1213_vm  1214  1214_vm  1260  1260_vm  1261  1261_vm  1262  1262_vm  2396  2396_vm  2397  2671  2672  pg_control  pg_internal.init
data/postgresqlite/pgdata/pg_stat/: db_0.stat  db_14416.stat  global.stat
data/postgresqlite/pgdata/pg_stat_tmp/: db_0.stat  db_14416.stat  global.stat
static/: style.css
static/images/: kjwuivylvbxkoawmttayqumltluyea  pcgtusrxlierjffirdijbvhufyhjtf  pnllxlnuqdmrfljhdevsdznuagtxcn  waxdfuaitdtdtrmcnnpbnksrmatpos  ybpygawpehevzqwordrdfxgqazdmfc  zxfhhzmvkozeivoddomzsqluqdpdjd
templates/: addbook.html  create_account.html  editbook.html  layout.html  login.html  main.html  request.html  userprofile.html  verification.html
(+113 files in other folders)
